Fix: Centrage titres pages menu version tablette

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,7 +16,7 @@ html {
 .main-container {
     width: 100%;
     box-sizing: border-box;
-    /*animation: delay-show 0ms 3s both;*/
+    animation: delay-show 0ms 3s both;
 }
 
 .page-container {
@@ -664,7 +664,8 @@ html {
         }
 
         @media screen and (min-width: 768px) and (max-width: 1024px) {
-            
+            margin: 0 auto;
+            padding: 0;
         }
     }
 
@@ -680,6 +681,9 @@ html {
         }
 
         @media screen and (min-width: 768px) and (max-width: 1024px) {
+            margin: 0 auto;
+            top: 5px;
+            width: 40px;
             
         }
     }
